# cloud-cost-optimization-toolkit

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-smoke.yml
config/: example.json
cost_optimizer/: aws.py  checks.py  cli.py  models.py  notifiers.py  reporting.py
docs/: ARCHITECTURE.md  PORTFOLIO_EVIDENCE.md  RUNBOOK.md  architecture.md  cost-estimate.md  incident-response.md  runbook.md  security-controls.md
examples/: sample_inventory.json  sample_report.md
scripts/: security_scan.py
tests/: test_checks.py  test_cli.py  test_portfolio_structure.py  test_reporting.py
